--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,11 +19,11 @@ nav > a {
     text-decoration: none;
     font-size: 30px;
     color: white;
+    padding: 10px;
 }
 
 nav > a:hover {
-    font-size: 36px;
-    transition: all 500ms;
+    background-color: rgba(105, 105, 105, 0.8);
 }
 
 .heading {
@@ -38,7 +38,7 @@ nav > a:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
+    /* width: 60%; */
     max-height: 80%;
     padding: 10px;
     border-radius: 10px;
@@ -76,15 +76,23 @@ td > h3 > a:hover {
 
 #name-form {
     text-align: right;
-    width: 50%;
+    /* width: 50%; */
     font-size: 17.5px;
 }
 
 #entry-form {
     text-align: left;
-    width: 45%;
+    /* width: 45%; */
+}
+
+#spacer {
+    width: 10px;
 }
 
 .entry {
     width: 300px;
+}
+
+li {
+    padding: 5px;
 }
