--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,7 +38,6 @@ nav > a:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* width: 60%; */
     max-height: 80%;
     padding: 10px;
     border-radius: 10px;
@@ -51,7 +50,6 @@ table {
     table-layout: fixed;
     width: 45%;
     max-height: 80%;
-    /* border: 2px solid black; */
 }
 
 img {
@@ -74,15 +72,17 @@ td > h3 > a:hover {
     color: white;
 }
 
+#show-content {
+    max-width: 30%;
+}
+
 #name-form {
     text-align: right;
-    /* width: 50%; */
     font-size: 17.5px;
 }
 
 #entry-form {
     text-align: left;
-    /* width: 45%; */
 }
 
 #spacer {
